--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "moxios": "^0.4.0",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.0",
+    "karma-browserify": "^5.2.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.0",
     "dotenv": "^5.0.1",
-    "expect": "^22.4.3",
-    "express": "^4.16.3",
     "gulp": "git://github.com/gulpjs/gulp.git#6d71a658c61edb3090221579d8f97dbe086ba2ed",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-browserify": "^0.5.1",
@@ -28,25 +35,16 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-webserver": "^0.9.1",
     "gulplog": "^1.0.0",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.0",
-    "karma-browserify": "^5.2.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.1",
     "lodash.assign": "^4.2.0",
-    "moxios": "^0.4.0",
     "phantomjs": "^2.1.7",
     "sinon": "^4.5.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "vue": "^2.5.16",
+    "vueify": "^9.4.1",
     "vue-resource-mock": "0.0.9",
     "vue-test-utils": "^1.0.0-beta.11",
-    "vueify": "^9.4.1",
+    "vue-axios": "^2.1.1",
     "watchify": "^3.11.0"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "vue-axios": "^2.1.1"
   }
 }
