Update the default gulp task so it doesn't error on first run as gulp:serve may be called before the dist folder exists.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tfl_dev_test",
   "version": "1.0.0",
   "description": "// make a vue component that's just 'hello world'\r // test it to make sure it says 'hello world'\r // git push",
-  "main": "app.js",
+  "main": "./src/app.js",
   "scripts": {
     "test": "karma start",
     "dev": "gulp"
